--- a/completed.html
+++ b/completed.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<img src="https://www.facebook.com/tr?id=&noscript=1&ev=Purchase" />
+<img src="https://www.facebook.com/tr?id=290774565444884=1&ev=Purchase" />
 
 </body>
 </html>
